Finally the API is done :)

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@ link <span class="token operator">=</span> requests<span class="token punctuatio
 <h4 id="website"><a href="https://meme-api.anshag2007.repl.co">Website</a></h4>
 </li>
 <li>
-<h4 id="websiteget"><a href="https://meme-api.anshag2007.repl.co">Website/get</a></h4>
+<h4 id="websiteget"><a href="https://meme-api.anshag2007.repl.co/get">Website/get</a></h4>
 </li>
 <li>
 <h4 id="github-repository"><a href="https://github.com/AnshAg2007/meme-api">Github Repository</a></h4>
