--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>meme-api.md</title>
+  <meta name="title" content="Meme API">
+  <meta name="author" content="AnshAgarwal">
+  <meta name="description" content="Simple but cool Meme API made in Python.">
+  <meta name="keywords" content="api,meme-api,meme,rest-apis,apis">
+  <title>Meme API</title>
   <link rel="stylesheet" href="https://stackedit.io/style.css" />
 </head>
 
@@ -50,10 +53,10 @@ link <span class="token operator">=</span> requests<span class="token punctuatio
 <h3 id="links">Links</h3>
 <ul>
 <li>
-<h4 id="website"><a href="https://meme-api.anshag2007.repl.co">Website</a></h4>
+<h4 id="website"><a href="https://meme-api.anshag2007.repl.co">Webpage</a></h4>
 </li>
 <li>
-<h4 id="websiteget"><a href="https://meme-api.anshag2007.repl.co/get">Website/get</a></h4>
+<h4 id="websiteget"><a href="https://meme-api.anshag2007.repl.co/get">Webpage/get</a></h4>
 </li>
 <li>
 <h4 id="github-repository"><a href="https://github.com/AnshAg2007/meme-api">Github Repository</a></h4>
